[package]
name = "my-first-game"
version = "0.1.0"
edition = "2021"

# rustup run nightly cargo run --features bevy/dynamicexit

[dependencies]
bevy = "0.9.1"
bevycheck = "0.4.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
